<resources>
    <string name="app_name">Qurio</string>
    <string name="lives">lives</string>
    <string name="points">Points</string>
    <string name="awards">Awards</string>
    <string name="submit">submit</string>
    <string name="play_now">Play Now</string>
    <string name="streak">Streak</string>
    <string name="sunday">Sunday</string>
    <string name="s">S</string>
    <string name="monday">Monday</string>
    <string name="m">M</string>
    <string name="tuesday">Tuesday</string>
    <string name="t">T</string>
    <string name="wednesday">Wednesday</string>
    <string name="w">W</string>
    <string name="thursday">Thursday</string>
    <string name="th">Th</string>
    <string name="f">F</string>
    <string name="friday">Friday</string>
    <string name="science_natural"><![CDATA[Science & Natural]]></string>
    <string name="games">Games</string>
    <string name="welcome_qurio_explorer">Welcome Qurio explorer</string>
    <string name="rika">Rika</string>
    <string name="reward">reward</string>
    <string name="correct">Correct</string>
    <string name="incorrect">Incorrect</string>
    <string name="skipped">Skipped</string>
    <string name="one_star">One Star</string>
    <string name="two_strars">Two Strars</string>
    <string name="three_stars">Three stars</string>
    <string name="welcome_to_the_world_of_qurio_where_questions_spark_curiosity_and_prizes_await_the_smartest_ready_to_begin_the_challenge">Welcome to the world of Qurio, where questions spark curiosity and prizes await the smartest. Ready to begin the challenge?</string>
    <string name="welcome_to_quiro">Welcome to Quiro</string>
    <string name="choose_your_character">Choose your character</string>
    <string name="challenge_and_win">Challenge and win</string>
    <string name="collect_them_all">Collect them all!</string>
    <string name="unlock_characters_earn_badges_and_climb_the_leaderboards_qurio_is_merciless_but_you_can_handle_it">Unlock characters, earn badges, and climb the leaderboards. Qurio is merciless, but you can handle it.</string>
    <string name="swipe_up_to_play">Swipe up to PLAY!</string>
    <string name="all">All</string>
    <string name="last_games">Last Games</string>
    <string name="sound">Sound</string>
    <string name="music">Music</string>
    <string name="game_type">Game Type</string>
    <string name="age_12_sunblooms">Age: 12 Sunblooms</string>
    <string name="rika_description">Nature’s little explorer! Rika talks to mushrooms and swears squirrels give her battle advice. Always ready for an adventure.</string>
    <string name="equals">=</string>
    <string name="character">Character</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="buy">Buy</string>
    <string name="skip">Skip</string>
    <string name="check">Check</string>
    <string name="loading_game">Loading Game</string>
    <string name="no_connection">No Connection</string>
    <string name="retry">Retry</string>
    <string name="no_connection_description">Oops! It looks like you’re offline. Please check your internet connection to continue playing</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="difficulty_level">Difficulty level</string>
    <string name="next">Next</string>
    <string name="_1">+1</string>
    <string name="minus_1">-1</string>
    <string name="share_win_with_friends">Share win with friends</string>
    <string name="play_again">Play again</string>
    <string name="back_to_home">Back to home</string>
    <string name="you_lose">You Lose</string>
    <string name="achievements">Achievements</string>
    <string name="quiz_rookie">Quiz Rookie</string>
    <string name="click_on_achievement_to_view_details">*Click on achievement to view details</string>
    <string name="explorer">Explorer</string>
    <string name="explorer_description">You love experimenting and discovering! You\'ve tried several categories and aren\'t limited to just one.</string>
    <string name="how_to_get">How to get:</string>
    <string name="play_in_at_least_4_different_categories">Play in at least 4 different categories.</string>
    <string name="share_with_friends">Share with friends</string>
    <string name="buy_life">Buy life</string>
    <string name="save_changes">Save changes</string>
    <string name="discard">Discard</string>
</resources>