<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/Surface">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="24dp"
        android:gravity="center"
        >

        <ImageView
            android:src="@drawable/no_connection"
            android:layout_width="match_parent"
            android:layout_height="200dp"/>

        <TextView
            style="@style/Typography.title.medium"
            android:text="@string/no_connection"
            android:textColor="@color/Shade_Primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            />

        <TextView
            style="@style/Typography.body.medium"
            android:text="@string/no_connection_description"
            android:textColor="@color/Shade_Secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            />

        <FrameLayout
            android:id="@+id/retry_button"
            android:layout_width="200dp"
            android:layout_height="44dp"
            android:background="@drawable/primary_button_bg"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            >
            <TextView
                style="@style/Typography.title.medium"
                android:text="@string/retry"
                android:textColor="@color/Shade_Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                />
        </FrameLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>