<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <LinearLayout
        android:id="@+id/three_stars"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:visibility="visible"
        android:gravity="center_horizontal"
        >

        <ImageView
            android:contentDescription="@string/three_stars"
            android:src="@drawable/star"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            />
        <ImageView
            android:contentDescription="@string/three_stars"
            android:src="@drawable/star"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="8dp"
            />
        <ImageView
            android:contentDescription="@string/three_stars"
            android:src="@drawable/star"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/two_stars"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:visibility="gone"
        android:gravity="center_horizontal"
        >

        <ImageView
            android:contentDescription="@string/two_strars"
            android:src="@drawable/star"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="12dp"
            />
        <ImageView
            android:contentDescription="@string/two_strars"
            android:src="@drawable/star"
            android:layout_width="48dp"
            android:layout_height="48dp"
            />

    </LinearLayout>

    <ImageView
        android:id="@+id/one_star"
        android:contentDescription="@string/one_star"
        android:src="@drawable/star"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"
        />

</androidx.constraintlayout.widget.ConstraintLayout>