<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/info_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/button_outlined"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="51dp"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginVertical="14dp"
            android:layout_marginStart="12dp"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/name"
                style="@style/Typography.title.large"
                android:textColor="@color/Shade_Primary"
                android:text="@string/explorer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:src="@drawable/character_glow_fill"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/info_box"
        android:layout_marginEnd="12dp"
        />

    <ImageView
        android:id="@+id/image_bg"
        android:src="@drawable/achievement_bg"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintEnd_toEndOf="@id/image"
        app:layout_constraintBottom_toBottomOf="@id/image"
        app:layout_constraintStart_toStartOf="@id/image"
        app:layout_constraintTop_toTopOf="@id/image"
        />

    <ImageView
        android:id="@+id/image"
        android:src="@drawable/explorer_owned"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintEnd_toEndOf="@id/info_box"
        app:layout_constraintBottom_toBottomOf="@id/info_box"
        android:layout_marginEnd="16dp"
        />

    <TextView
        android:id="@+id/description"
        style="@style/Typography.body.small"
        android:textColor="@color/Shade_Secondary"
        android:text="@string/explorer_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/info_box"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingHorizontal="12dp"
        android:layout_marginTop="12dp"
        />

    <TextView
        android:id="@+id/how_to_get"
        style="@style/Typography.body.small"
        android:textColor="@color/Shade_Secondary"
        android:text="@string/how_to_get"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/description"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        />

    <TextView
        android:id="@+id/how_to_get_description"
        style="@style/Typography.body.small"
        android:textColor="@color/Shade_Secondary"
        android:text="@string/play_in_at_least_4_different_categories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/how_to_get"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingHorizontal="12dp"
        android:layout_marginTop="4dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>