<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/Surface"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_holder"
        >

        <include
            layout="@layout/result_item"
            android:id="@+id/result_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            />

        <LinearLayout
            android:id="@+id/share_button"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:background="@drawable/primary_button_bg"
            android:gravity="center_horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            >

            <TextView
                style="@style/Typography.label.medium"
                android:textColor="@color/On_primary"
                android:text="@string/share_win_with_friends"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                />

            <ImageView
                android:src="@drawable/ic_share"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="24dp"
        >

        <FrameLayout
            android:id="@+id/play_again_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/primary_button_bg"
            >

            <TextView
                style="@style/Typography.label.large"
                android:text="@string/play_again"
                android:textColor="@color/On_primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/back_to_home_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/button_outlined_disabled"
            android:layout_marginTop="12dp"
            >

            <TextView
                style="@style/Typography.label.large"
                android:text="@string/back_to_home"
                android:textColor="@color/Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                />

        </FrameLayout>

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>