<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Difficulty Buttons -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/difficulty_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/dialog_character_bg"
        android:layout_marginTop="16dp"
        >

        <!-- Easy -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/easy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/medium"
            android:background="@drawable/result_info_background"
            android:layout_marginTop="91dp"
            >

            <TextView
                android:id="@+id/easy_text"
                style="@style/Typography.label.medium"
                android:text="@string/easy"
                android:textColor="@color/Shade_Secondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="31dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="7dp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Medium -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/easy"
            app:layout_constraintEnd_toStartOf="@id/hard"
            android:background="@drawable/result_info_background"
            android:layout_marginTop="91dp"
            >

            <TextView
                android:id="@+id/medium_text"
                style="@style/Typography.label.medium"
                android:text="@string/medium"
                android:textColor="@color/Shade_Secondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="21dp"
                android:layout_marginEnd="22dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="7dp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- hard -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/hard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/medium"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/difficulty_level_button_bg"
            android:layout_marginTop="91dp"
            >

            <TextView
                android:id="@+id/hard_text"
                style="@style/Typography.label.medium"
                android:text="@string/hard"
                android:textColor="@color/On_primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="31dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="7dp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/confirm_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingBottom="36dp"
            android:layout_marginTop="180dp"
            android:layout_marginHorizontal="12dp"
            >
            <FrameLayout
                android:id="@+id/confirm_button"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintDimensionRatio="3.5:1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/cancel_button"
                android:background="@drawable/primary_button_bg"
                >

                <TextView
                    style="@style/Typography.label.large"
                    android:id="@+id/confirm_text"
                    android:text="@string/confirm"
                    android:textColor="@color/On_primary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/cancel_button"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintDimensionRatio="3.5:1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/confirm_button"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/button_outlined"
                android:layout_marginStart="8dp"
                >

                <TextView
                    style="@style/Typography.label.large"
                    android:id="@+id/cancel_text"
                    android:text="@string/cancel"
                    android:textColor="@color/Primary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    />

            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>




    <!--  Exit Button  -->
    <ImageView
        android:id="@+id/exit_button"
        android:src="@drawable/exit_corner"
        android:layout_width="22dp"
        android:layout_height="26dp"
        app:layout_constraintTop_toTopOf="@id/difficulty_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="15dp"
        />

    <!-- header -->
    <ImageView
        android:id="@+id/header"
        android:src="@drawable/lastgame_header"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        style="@style/Typography.title.small"
        android:text="@string/difficulty_level"
        android:textColor="@color/On_primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/header"
        app:layout_constraintStart_toStartOf="@id/header"
        app:layout_constraintBottom_toBottomOf="@id/header"
        app:layout_constraintEnd_toEndOf="@id/header"
        android:layout_marginBottom="14dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>